[gd_scene load_steps=30 format=2]

[ext_resource path="res://images/machine/animations/idle/machine_idle0008.png" type="Texture" id=1]
[ext_resource path="res://images/machine/animations/idle/machine_idle0006.png" type="Texture" id=2]
[ext_resource path="res://images/machine/animations/idle/machine_idle0000.png" type="Texture" id=3]
[ext_resource path="res://images/machine/animations/idle/machine_idle0002.png" type="Texture" id=4]
[ext_resource path="res://images/machine/animations/idle/machine_idle0003.png" type="Texture" id=5]
[ext_resource path="res://images/machine/animations/idle/machine_idle0010.png" type="Texture" id=6]
[ext_resource path="res://images/machine/animations/idle/machine_idle0007.png" type="Texture" id=7]
[ext_resource path="res://images/machine/animations/idle/machine_idle0001.png" type="Texture" id=8]
[ext_resource path="res://images/machine/animations/idle/machine_idle0011.png" type="Texture" id=9]
[ext_resource path="res://images/machine/animations/idle/machine_idle0009.png" type="Texture" id=10]
[ext_resource path="res://images/machine/animations/idle/machine_idle0005.png" type="Texture" id=11]
[ext_resource path="res://images/machine/animations/idle/machine_idle0004.png" type="Texture" id=12]
[ext_resource path="res://images/machine/animations/loading/machine_idle0001.png" type="Texture" id=13]
[ext_resource path="res://images/machine/animations/loading/machine_idle0003.png" type="Texture" id=14]
[ext_resource path="res://images/machine/animations/loading/machine_idle0004.png" type="Texture" id=15]
[ext_resource path="res://images/machine/animations/loading/machine_idle0002.png" type="Texture" id=16]
[ext_resource path="res://images/machine/animations/loading/machine_idle0008.png" type="Texture" id=17]
[ext_resource path="res://images/machine/animations/loading/machine_idle0009.png" type="Texture" id=18]
[ext_resource path="res://images/machine/animations/loading/machine_idle0011.png" type="Texture" id=19]
[ext_resource path="res://images/machine/animations/loading/machine_idle0000.png" type="Texture" id=20]
[ext_resource path="res://images/machine/animations/loading/machine_idle0006.png" type="Texture" id=21]
[ext_resource path="res://images/machine/animations/loading/machine_idle0005.png" type="Texture" id=22]
[ext_resource path="res://images/machine/animations/loading/machine_idle0007.png" type="Texture" id=23]
[ext_resource path="res://images/machine/animations/loading/machine_idle0010.png" type="Texture" id=24]
[ext_resource path="res://scripts/nodes/Machine.gd" type="Script" id=25]
[ext_resource path="res://sounds/loading.mp3" type="AudioStream" id=26]
[ext_resource path="res://sounds/win.mp3" type="AudioStream" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 24 ), ExtResource( 19 ) ],
"loop": false,
"name": "loading",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 80, 80 )

[node name="Machine" type="Node2D"]
script = ExtResource( 25 )

[node name="Animations" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="Area2D" type="Area2D" parent="." groups=["machine"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Sounds" type="Node2D" parent="."]

[node name="LoadingSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 26 )

[node name="WinSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 27 )

[connection signal="animation_finished" from="Animations" to="." method="_on_Animations_animation_finished"]
